force-app/main/default/objects/Retailer_Related_Contact__c/Retailer_Related_Contact__c.object-meta.xml
<CustomObject>
    <label>Retailer Related Contact</label>
    <nameField>
        <displayFormat>RRC-{00000}</displayFormat>
        <label>Retailer Related Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Related Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>